fix: add z-index and move QToastr component to QToastr folder
add z-index to Toastr.scss and move QToastr and its styles to QToastr folder

--- a/packages/toastr/src/react-component-node-modules/components/Toastr/styles/Toastr.scss
+++ b/packages/toastr/src/react-component-node-modules/components/Toastr/styles/Toastr.scss
@@ -1,5 +1,6 @@
 .view-page {
   position: fixed;
+  z-index: 99;
   display: flex;
   align-items: flex-start;
   justify-content: center;
